Add flag in github action so that every warning will be treated as error
Signed-off-by: Sumit Jaiswal <sumiji@amazon.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: build-postgres
         run: |
-          ./configure
+          ./configure CFLAGS="-Werror"
           make world-bin -j8
       - name: run-tests
         run: |
