--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - name: build-postgres
         run: |
           ./configure
-          make world-bin -j8 COPT='-Werror'
+          make world-bin -j8
       - name: run-tests
         run: |
           make check -j8
