Revert "Add Babelfish full text files (#186)"
This reverts commit 590708e440d36bd985823ed67fb5bc9e51727321.

--- a/src/backend/tsearch/Makefile
+++ b/src/backend/tsearch/Makefile
@@ -18,8 +18,7 @@ DICTFILES=synonym_sample.syn thesaurus_sample.ths \
 	hunspell_sample.affix \
 	ispell_sample.affix ispell_sample.dict \
 	hunspell_sample_long.affix hunspell_sample_long.dict \
-	hunspell_sample_num.affix hunspell_sample_num.dict \
-	irregular_verbs.syn
+	hunspell_sample_num.affix hunspell_sample_num.dict
 
 # Local paths to dictionaries files
 DICTFILES_PATH=$(addprefix dicts/,$(DICTFILES))
